[project]
name = "gistool"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "qe617", email = "113289713+qe617@users.noreply.github.com" }
]
dependencies = [
    "django>=5.0.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/gistool"]
